# evo-nexus01

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROUTINES.md  docker-compose.yml  evonexus.portainer.stack.yml  evonexus.stack.yml  install-service.sh  pyproject.toml  scheduler.py  setup.py  start-services.sh
.claude/skills/create-routine/: SKILL.md
.claude/skills/fin-daily-pulse/: SKILL.md
.claude/skills/fin-monthly-close-kickoff/: SKILL.md
.claude/skills/fin-weekly-report/: SKILL.md
.claude/skills/gog-email-triage/: SKILL.md
.claude/skills/int-github-review/: SKILL.md
.claude/skills/int-linear-review/: SKILL.md
.claude/skills/int-sync-meetings/: SKILL.md
.claude/skills/knowledge-reindex/: SKILL.md
.claude/skills/knowledge-summarize/: SKILL.md
.claude/skills/prod-dashboard/: SKILL.md
.claude/skills/prod-end-of-day/: SKILL.md
.claude/skills/prod-review-todoist/: SKILL.md
.claude/skills/prod-trends/: SKILL.md
.claude/skills/pulse-daily/: SKILL.md
.claude/skills/pulse-faq-sync/: SKILL.md
.claude/skills/pulse-monthly/: SKILL.md
.claude/skills/pulse-weekly/: SKILL.md
.claude/skills/sage-strategy-digest/: SKILL.md
.github/workflows/: site.yml
ADWs/routines/: end_of_day.py  good_morning.py  memory_sync.py  weekly_review.py
ADWs/routines/custom/: community_daily.py  (+19 more)
cli/: package.json
dashboard/backend/: app.py
docs/: architecture.md  getting-started.md  introduction.md  llms-full.txt
docs/dashboard/: knowledge.md  overview.md
docs/guides/: updating.md
docs/reference/: env-variables.md
site/: package.json
(+52 files in other folders)
