[project]
name = "evo-nexus"
version = "0.20.1"
description = "Unofficial open source toolkit for Claude Code — AI-powered business operating system"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "schedule>=1.2",
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-sqlalchemy>=3.1",
    "flask-login>=0.6",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "flask-sock>=0.7",
    "boto3>=1.35",
    "pywinpty>=3.0.3; sys_platform == 'win32'",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
]
